data/derived/sp14/progs/unify/prog0505.ml.out
Characters 149-172:
  | 0 -> buildSine(build(rand, depth -1))
                  ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
